[gd_scene load_steps=13 format=2]

[ext_resource path="res://Music/Aosta.wav" type="AudioStream" id=1]
[ext_resource path="res://Music.gd" type="Script" id=2]
[ext_resource path="res://Music/AquaTide (Again).wav" type="AudioStream" id=3]
[ext_resource path="res://Music/Aqua Blue Knight complete for real.wav" type="AudioStream" id=4]
[ext_resource path="res://Music/Lava Cavern.wav" type="AudioStream" id=5]
[ext_resource path="res://Music/A Mind_s Flame.wav" type="AudioStream" id=6]
[ext_resource path="res://Music/Fire-Coloured Intelligence.wav" type="AudioStream" id=7]
[ext_resource path="res://Music/Heroine_s Gardens (Again).wav" type="AudioStream" id=8]
[ext_resource path="res://Music/The Floating Capital (Better).wav" type="AudioStream" id=9]
[ext_resource path="res://Music/Underwater Battle .wav" type="AudioStream" id=10]
[ext_resource path="res://Music/Flight of the Electric Dreamer (better).wav" type="AudioStream" id=11]
[ext_resource path="res://Music/An Electric Presence.wav" type="AudioStream" id=12]

[node name="Music" type="Node2D"]
script = ExtResource( 2 )

[node name="SparkForest" type="AudioStreamPlayer" parent="."]
volume_db = 12.0

[node name="MackenzieEncounter" type="AudioStreamPlayer" parent="."]

[node name="Aquatides" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = 20.0

[node name="PlaceHolder" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )

[node name="ColinBoss" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = 12.0

[node name="MagmaCavern" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = 12.0

[node name="MichelleBoss" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -18.0

[node name="MichelleEncrounter" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = 8.0

[node name="FloatingCapital" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="Heroine\'s Garden" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = 10.0

[node name="ColinEncounter" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="SamsEncounter" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
volume_db = 12.0

[node name="SamBoss" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = 12.0
